Finish note. Update incorrect information on agg()

--- a/pandas_08a.ipynb
+++ b/pandas_08a.ipynb
@@ -274,8 +274,8 @@
    ],
    "source": [
     "# Used on a df with combination of columns\n",
-    "x = df.value_counts([\"ConvertedCompYearly\", \"RemoteWork\"])\n",
-    "display(x)\n"
+    "series = df.value_counts([\"ConvertedCompYearly\", \"RemoteWork\"])\n",
+    "display(series)\n"
    ]
   },
   {
@@ -328,12 +328,12 @@
    ],
    "source": [
     "# Used on a Series and using the normalize parameter\n",
-    "x = df[\"ConvertedCompYearly\"].value_counts(normalize=True)\n",
-    "display(x)\n",
+    "series = df[\"ConvertedCompYearly\"].value_counts(normalize=True)\n",
+    "display(series)\n",
     "\n",
     "# We can multiply all the values in the Series by 100\n",
     "# to show the values in their percentage (out of 100%)\n",
-    "display(x * 100)"
+    "display(series * 100)"
    ]
   },
   {
@@ -916,18 +916,18 @@
     }
    ],
    "source": [
-    "# agg() on DataFrame\n",
-    "\n",
-    "# Since agg() only works on numeric data types.\n",
-    "# Let's create a df consisting only of numeric columns\n",
+    "# Since we will use numerical aggregate functions (median and mode),\n",
+    "# let's create a df consisting only of numeric columns\n",
     "num_df = df.select_dtypes(include=\"number\")\n",
-    "# Drop empty columns (idk why this is even in the survey. It has no entry)\n",
+    "\n",
+    "# Drop empty columns (idk why this are even in the survey. They have no entries)\n",
     "num_df = num_df.drop([\"VCHostingPersonal use\", \"VCHostingProfessional use\"], axis=1)\n",
     "\n",
-    "x = num_df.agg([\"median\", \"mean\"])\n",
-    "display(x)\n",
+    "series = num_df.agg([\"median\", \"mean\"])\n",
+    "display(series)\n",
     "\n",
-    "# Note that CompTotal is not normalized; currencies differ\n"
+    "# Note that CompTotal is not normalized; currencies differ and you might see\n",
+    "# extreme contrasts between values."
    ]
   },
   {
@@ -949,8 +949,8 @@
    ],
    "source": [
     "# agg() on Series\n",
-    "x = df[\"ConvertedCompYearly\"].agg([\"median\", \"mean\"])\n",
-    "display(x)\n"
+    "series = df[\"ConvertedCompYearly\"].agg([\"median\", \"mean\"])\n",
+    "display(series)\n"
    ]
   },
   {
@@ -971,7 +971,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "### How many developers from Japan knows Python?\n",
+    "### E1. How many developers from Japan knows Python?\n",
     "We can create a filter for both the conditions (Japan, and Python), and count how the True values from the filter either by using previously `value_counts()` or by the `sum()` method.  \n",
     "\n",
     "`sum()` is normally used on numerical values, but it can also work on Booleans; it returns the count of True values.\n",
@@ -990,8 +990,247 @@
     "\n",
     "# Filter for respondents that works with Python\n",
     "# This will result to a filter of respondents who works in Japan AND works with Python\n",
-    "# dropna() drops NaN values because some respondents did not fill out the question.\n",
-    "filt = df.loc[filt_country][\"LanguageHaveWorkedWith\"].str.contains(\"Python\").dropna()"
+    "filt = df.loc[filt_country][\"LanguageHaveWorkedWith\"].str.contains(\"Python\").dropna()\n",
+    "# dropna() drops NaN values because some respondents did not fill out the question."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "#### E1. Python users by country\n",
+    "Using a groupby's `apply()` method, let us determine the proportion of developers by country who knows Python.  \n",
+    "\n",
+    "The `groupby.apply()` method takes a function name as it's argument and that function should be able to take a Series as its argument and return a DataFrame. `apply()` will take care of combining the results back together into a single DataFrame or Series.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Afghanistan                             0.390625\n",
+       "Albania                                 0.339286\n",
+       "Algeria                                 0.527778\n",
+       "Andorra                                 0.266667\n",
+       "Angola                                  0.272727\n",
+       "                                          ...   \n",
+       "Venezuela, Bolivarian Republic of...    0.440678\n",
+       "Viet Nam                                0.447368\n",
+       "Yemen                                   0.285714\n",
+       "Zambia                                  0.352941\n",
+       "Zimbabwe                                0.392857\n",
+       "Name: LanguageHaveWorkedWith, Length: 180, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# First we create a DataFrame.groupby object:\n",
+    "country_group = df.groupby(\"Country\")\n",
+    "\n",
+    "\n",
+    "# Define function for getting proportion of devs who knows Python\n",
+    "def python_proportion(series):\n",
+    "    # This only compares the number of devs who know Python\n",
+    "    # to the total non-NA values. Use len(series) to include\n",
+    "    # NA values.\n",
+    "    n_python = series.str.contains(\"Python\").sum()\n",
+    "    return (n_python) / series.count()\n",
+    "\n",
+    "\n",
+    "series_python_proportions = country_group[\"LanguageHaveWorkedWith\"].apply(\n",
+    "    python_proportion\n",
+    ")\n",
+    "display(series_python_proportions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# By using a lambda fraction, we can achieve the same results:\n",
+    "series_python_proportions = country_group[\"LanguageHaveWorkedWith\"].apply(\n",
+    "    lambda x: x.str.contains(\"Python\").sum() / x.count()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PercentPython</th>\n",
+       "      <th>KnowsPython</th>\n",
+       "      <th>TotalRespondents</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>0.390625</td>\n",
+       "      <td>25</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Albania</th>\n",
+       "      <td>0.339286</td>\n",
+       "      <td>19</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algeria</th>\n",
+       "      <td>0.527778</td>\n",
+       "      <td>19</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andorra</th>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Angola</th>\n",
+       "      <td>0.272727</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Venezuela, Bolivarian Republic of...</th>\n",
+       "      <td>0.440678</td>\n",
+       "      <td>52</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Viet Nam</th>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>136</td>\n",
+       "      <td>304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yemen</th>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zambia</th>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zimbabwe</th>\n",
+       "      <td>0.392857</td>\n",
+       "      <td>11</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>180 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      PercentPython  KnowsPython   \n",
+       "Country                                                            \n",
+       "Afghanistan                                0.390625           25  \\\n",
+       "Albania                                    0.339286           19   \n",
+       "Algeria                                    0.527778           19   \n",
+       "Andorra                                    0.266667            4   \n",
+       "Angola                                     0.272727            3   \n",
+       "...                                             ...          ...   \n",
+       "Venezuela, Bolivarian Republic of...       0.440678           52   \n",
+       "Viet Nam                                   0.447368          136   \n",
+       "Yemen                                      0.285714            4   \n",
+       "Zambia                                     0.352941            6   \n",
+       "Zimbabwe                                   0.392857           11   \n",
+       "\n",
+       "                                      TotalRespondents  \n",
+       "Country                                                 \n",
+       "Afghanistan                                         64  \n",
+       "Albania                                             56  \n",
+       "Algeria                                             36  \n",
+       "Andorra                                             15  \n",
+       "Angola                                              11  \n",
+       "...                                                ...  \n",
+       "Venezuela, Bolivarian Republic of...               118  \n",
+       "Viet Nam                                           304  \n",
+       "Yemen                                               14  \n",
+       "Zambia                                              17  \n",
+       "Zimbabwe                                            28  \n",
+       "\n",
+       "[180 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create a DF by concatenating the Series of people who knows Python (in proportion\n",
+    "# and in frequency), and the total respondents by country (non-NA)\n",
+    "\n",
+    "# Series\n",
+    "series_python_freq = country_group[\"LanguageHaveWorkedWith\"].apply(\n",
+    "    lambda x: x.str.contains(\"Python\").sum()\n",
+    ")\n",
+    "\n",
+    "series_n_respondents = country_group[\"LanguageHaveWorkedWith\"].count()\n",
+    "\n",
+    "# Create df\n",
+    "df_python = pd.concat(\n",
+    "    objs=[series_python_proportions, series_python_freq, series_n_respondents],\n",
+    "    keys=[\"PercentPython\", \"KnowsPython\", \"TotalRespondents\"],\n",
+    "    axis=\"columns\",\n",
+    ")\n",
+    "\n",
+    "display(df_python)"
    ]
   }
  ],
