Add alternate example on More Examples section

--- a/pandas_08a.ipynb
+++ b/pandas_08a.ipynb
@@ -1059,12 +1059,46 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Country\n",
+       "Afghanistan                             0.390625\n",
+       "Albania                                 0.339286\n",
+       "Algeria                                 0.527778\n",
+       "Andorra                                 0.266667\n",
+       "Angola                                  0.272727\n",
+       "                                          ...   \n",
+       "Venezuela, Bolivarian Republic of...    0.440678\n",
+       "Viet Nam                                0.447368\n",
+       "Yemen                                   0.285714\n",
+       "Zambia                                  0.352941\n",
+       "Zimbabwe                                0.392857\n",
+       "Name: LanguageHaveWorkedWith, Length: 180, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# By using a lambda fraction, we can achieve the same results:\n",
-    "series_python_proportions = country_group[\"LanguageHaveWorkedWith\"].apply(\n",
+    "series_python_proportions_2 = country_group[\"LanguageHaveWorkedWith\"].apply(\n",
     "    lambda x: x.str.contains(\"Python\").sum() / x.count()\n",
-    ")"
+    ")\n",
+    "display(series_python_proportions_2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Create a df by concatenating the Series of people who knows Python (in proportion and in frequency), and the total respondents by country (non-NA). \n",
+    "\n",
+    "---"
    ]
   },
   {
@@ -1213,9 +1247,6 @@
     }
    ],
    "source": [
-    "# Create a DF by concatenating the Series of people who knows Python (in proportion\n",
-    "# and in frequency), and the total respondents by country (non-NA)\n",
-    "\n",
     "# Series\n",
     "series_python_freq = country_group[\"LanguageHaveWorkedWith\"].apply(\n",
     "    lambda x: x.str.contains(\"Python\").sum()\n",
@@ -1231,6 +1262,177 @@
     ")\n",
     "\n",
     "display(df_python)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "There are numerous ways to achieve the df we got from the previous example, another one is instead of creating 3 Series independently, we can create the `series_python_porportions` as a derived Series from the other 2 Series.\n",
+    "\n",
+    "The reason why the previous example was concatenated that way was for convenience since `series_python_proportions` was already created from a previous example.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PercentPython</th>\n",
+       "      <th>KnowsPython</th>\n",
+       "      <th>TotalRespondents</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Afghanistan</th>\n",
+       "      <td>0.390625</td>\n",
+       "      <td>25</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Albania</th>\n",
+       "      <td>0.339286</td>\n",
+       "      <td>19</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Algeria</th>\n",
+       "      <td>0.527778</td>\n",
+       "      <td>19</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Andorra</th>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>4</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Angola</th>\n",
+       "      <td>0.272727</td>\n",
+       "      <td>3</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Venezuela, Bolivarian Republic of...</th>\n",
+       "      <td>0.440678</td>\n",
+       "      <td>52</td>\n",
+       "      <td>118</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Viet Nam</th>\n",
+       "      <td>0.447368</td>\n",
+       "      <td>136</td>\n",
+       "      <td>304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yemen</th>\n",
+       "      <td>0.285714</td>\n",
+       "      <td>4</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zambia</th>\n",
+       "      <td>0.352941</td>\n",
+       "      <td>6</td>\n",
+       "      <td>17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Zimbabwe</th>\n",
+       "      <td>0.392857</td>\n",
+       "      <td>11</td>\n",
+       "      <td>28</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>180 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                      PercentPython  KnowsPython   \n",
+       "Country                                                            \n",
+       "Afghanistan                                0.390625           25  \\\n",
+       "Albania                                    0.339286           19   \n",
+       "Algeria                                    0.527778           19   \n",
+       "Andorra                                    0.266667            4   \n",
+       "Angola                                     0.272727            3   \n",
+       "...                                             ...          ...   \n",
+       "Venezuela, Bolivarian Republic of...       0.440678           52   \n",
+       "Viet Nam                                   0.447368          136   \n",
+       "Yemen                                      0.285714            4   \n",
+       "Zambia                                     0.352941            6   \n",
+       "Zimbabwe                                   0.392857           11   \n",
+       "\n",
+       "                                      TotalRespondents  \n",
+       "Country                                                 \n",
+       "Afghanistan                                         64  \n",
+       "Albania                                             56  \n",
+       "Algeria                                             36  \n",
+       "Andorra                                             15  \n",
+       "Angola                                              11  \n",
+       "...                                                ...  \n",
+       "Venezuela, Bolivarian Republic of...               118  \n",
+       "Viet Nam                                           304  \n",
+       "Yemen                                               14  \n",
+       "Zambia                                              17  \n",
+       "Zimbabwe                                            28  \n",
+       "\n",
+       "[180 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Instead of using the apply function, just derive the series_python_proportions\n",
+    "# Series from the two existing Series.\n",
+    "series_python_proportions_2 = series_python_freq / series_n_respondents\n",
+    "df_python2 = pd.concat(\n",
+    "    objs=[series_python_proportions_2, series_python_freq, series_n_respondents],\n",
+    "    keys=[\"PercentPython\", \"KnowsPython\", \"TotalRespondents\"],\n",
+    "    axis=\"columns\",\n",
+    ")\n",
+    "\n",
+    "display(df_python2)"
    ]
   }
  ],
