Update missing values section. Add missing values definition Add list on how to handle missing values

--- a/pandas_09a.ipynb
+++ b/pandas_09a.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "---\n",
     "# Cleaning Data and Handling Missing Values \n",
-    "Missing values are inevitable when handling data sets. On this section, we will be exploring how how to clean data, handle missing values, and casting data types. Casting simply means to convert form one data type to another.\n",
+    "Missing values are inevitable when handling data sets. On this section, we will be exploring on how to clean data, handle missing values, and casting data types. Casting simply means to convert form one data type to another.\n",
     "\n",
     "\n",
     "---"
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,9 +47,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>None</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>anonymouse@email.com</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Missing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first     last                 email      age\n",
+       "0  Lorem    Ipsum       lorem@yahoo.com       25\n",
+       "1   John      Doe        john@gmail.com       35\n",
+       "2   Jane      Doe      jane@outlook.com       19\n",
+       "3    Foo      Bar                  None       36\n",
+       "4    NaN      NaN                   NaN     None\n",
+       "5   None      NaN  anonymouse@email.com     None\n",
+       "6     NA  Missing                    NA  Missing"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "people = {\n",
     "    \"first\": [\"Lorem\", \"John\", \"Jane\", \"Foo\", np.nan, None, \"NA\"],\n",
@@ -66,7 +162,8 @@
     "    \"age\": [\"25\", \"35\", \"19\", \"36\", None, None, \"Missing\"],\n",
     "}\n",
     "\n",
-    "df = pd.DataFrame(people)"
+    "df = pd.DataFrame(people)\n",
+    "display(df)"
    ]
   },
   {
@@ -75,32 +172,455 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Aggregating Data\n",
-    "Aggregation is any process where data is expressed in summary form. (e.g. taking the mean of data)\n",
+    "## Missing Values\n",
+    "Before we start working with missing values, we must first understand what is a **missing value.** A missing value is represented by NaN (Not a Number) or None and is used to represent the absence of data in a column or a row of a DatFrame. Missing values can result from various reasons such as incomplete data, data corruption, or data entry errors. From my (limited) testing, empty cells or the following strings resolve to NaN when loaded into a DataFrame:\n",
     "\n",
-    "---"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "### `describe()` Method\n",
-    "Pandas has a `describe()` method that shows different aggregate statistics of the column(s) (determined by the **include** parameter. Defaults to numeric columns).\n",
+    "- NULL\n",
+    "- null\n",
+    "\n",
+    "- None\n",
+    "\n",
+    "- nan\n",
+    "- NaN  \n",
+    "\n",
+    "To check if a value is a NaN (or Null), you can run the pandas function `isnull()` or `isna()` which returns a boolean about the nature of the value.  \n",
+    "\n",
+    "pd.isnull(\\<value\\>)  \n",
+    "or  \n",
+    "pd.isna(\\<value\\>)\n",
+    "\n",
+    "\n",
+    "Note: `isna()` is just an alias of `isnull()`. They are equivalent.\n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>None</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>anonymouse@email.com</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Missing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first     last                 email      age\n",
+       "0  Lorem    Ipsum       lorem@yahoo.com       25\n",
+       "1   John      Doe        john@gmail.com       35\n",
+       "2   Jane      Doe      jane@outlook.com       19\n",
+       "3    Foo      Bar                  None       36\n",
+       "4    NaN      NaN                   NaN     None\n",
+       "5   None      NaN  anonymouse@email.com     None\n",
+       "6     NA  Missing                    NA  Missing"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Jane'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "None"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Check value:\n",
+    "display(df)\n",
+    "printhr()\n",
+    "\n",
+    "# isna() returns False, signifying that the value is \n",
+    "x = df.loc[2, \"first\"]\n",
+    "display(x, pd.isna(x))\n",
+    "printhr()\n",
+    "\n",
+    "y = df.loc[4, \"age\"]\n",
+    "display(y, pd.isna(y))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Handling Missing Values\n",
+    "\n",
+    "There are different ways of handling missing values and will solely depend on the context of the type of data and the analysis we want to perform. Some common ways (non-comprehensive list) and what will be discussed here will be:\n",
+    "\n",
+    "1. **Deletion**- we simply remove (aka drop) rows or columns containing missing values.\n",
+    "2. **Imputation**- replace missing values with other values, such as mean, median, or mode of the non-missing values.\n",
+    "3. **Don't Modify**- missing values can be informative in some cases and can be kept in a data set.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Deletion\n",
+    "pandas has a `dropna()` method that can remove nan values. Some parameters of `dropna()` are:  \n",
+    "\n",
+    "`axis`: {0 or ‘index’, 1 or ‘columns’}, default 0\n",
+    "\n",
+    "Determine if rows or columns which contain missing values are removed.\n",
+    "0, or 'index': Drop rows which contain missing values.\n",
+    "1, or 'columns': Drop columns which contain missing value.\n",
+    "\n",
+    "Pass tuple or list to drop on multiple axes. Only a single axis is allowed.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "`how`: {'any', 'all'}, default 'any'\n",
+    "\n",
+    "Determine if row or column is removed from DataFrame, when we have at least one NA or all NA.\n",
+    "\n",
+    "‘any’ : If any NA values are present, drop that row or column.\n",
+    "\n",
+    "‘all’ : If all values are NA, drop that row or column.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "`thresh`: *int*, optional\n",
+    "\n",
+    "Require that many non-NA values. Cannot be combined with how.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "`ignore_index`: *bool*, default False\n",
+    "\n",
+    "If True, the resulting axis will be labeled 0, 1, …, n - 1.\n",
+    "\n",
+    "---\n",
+    "From pandas [documentation](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.dropna.html) on DataFrame.dropna.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Foo</td>\n",
+       "      <td>Bar</td>\n",
+       "      <td>None</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>anonymouse@email.com</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Missing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first     last                 email      age\n",
+       "0  Lorem    Ipsum       lorem@yahoo.com       25\n",
+       "1   John      Doe        john@gmail.com       35\n",
+       "2   Jane      Doe      jane@outlook.com       19\n",
+       "3    Foo      Bar                  None       36\n",
+       "4    NaN      NaN                   NaN     None\n",
+       "5   None      NaN  anonymouse@email.com     None\n",
+       "6     NA  Missing                    NA  Missing"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "      <th>age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lorem</td>\n",
+       "      <td>Ipsum</td>\n",
+       "      <td>lorem@yahoo.com</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>John</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>john@gmail.com</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jane</td>\n",
+       "      <td>Doe</td>\n",
+       "      <td>jane@outlook.com</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NA</td>\n",
+       "      <td>Missing</td>\n",
+       "      <td>NA</td>\n",
+       "      <td>Missing</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   first     last             email      age\n",
+       "0  Lorem    Ipsum   lorem@yahoo.com       25\n",
+       "1   John      Doe    john@gmail.com       35\n",
+       "2   Jane      Doe  jane@outlook.com       19\n",
+       "6     NA  Missing                NA  Missing"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#TODO. Explain whats happening here.\n",
+    "# Create more dropna examples.\n",
+    "display(df)\n",
+    "printhr()\n",
+    "\n",
+    "df.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.DataFrame(people)\n",
+    "### Reference. For me\n",
     "\n",
+    "# df = pd.DataFrame(people)\n",
     "# x = df.replace(\"NA\", np.nan)\n",
     "# y = df.replace(\"Missing\", np.nan)"
    ]
