--- a/pandas_10a.ipynb
+++ b/pandas_10a.ipynb
@@ -485,16 +485,214 @@
     "display(day_series)\n",
     "printhr()\n",
     "\n",
-    "# Use example: creating a new column of the week days\n",
+    "# Example: creating a new column of the week days\n",
     "df[\"WeekDay\"] = day_series\n",
     "display(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>WeekDay</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-13 20:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>131.82</td>\n",
+       "      <td>126.87</td>\n",
+       "      <td>128.71</td>\n",
+       "      <td>1940673.93</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-13 19:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>132.02</td>\n",
+       "      <td>117.10</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>7579741.09</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-13 18:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>115.50</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>4898735.81</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-13 17:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>127.42</td>\n",
+       "      <td>121.63</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>2753450.92</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-13 16:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>129.51</td>\n",
+       "      <td>120.17</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>4461424.71</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23669</th>\n",
+       "      <td>2017-07-01 15:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>265.74</td>\n",
+       "      <td>272.74</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>272.57</td>\n",
+       "      <td>1500282.55</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23670</th>\n",
+       "      <td>2017-07-01 14:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>268.79</td>\n",
+       "      <td>269.90</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>265.74</td>\n",
+       "      <td>1702536.85</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23671</th>\n",
+       "      <td>2017-07-01 13:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>274.83</td>\n",
+       "      <td>274.93</td>\n",
+       "      <td>265.00</td>\n",
+       "      <td>268.79</td>\n",
+       "      <td>3010787.99</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23672</th>\n",
+       "      <td>2017-07-01 12:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>271.00</td>\n",
+       "      <td>274.83</td>\n",
+       "      <td>824362.87</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23673</th>\n",
+       "      <td>2017-07-01 11:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>279.98</td>\n",
+       "      <td>279.99</td>\n",
+       "      <td>272.10</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>679358.87</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23674 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Date  Symbol    Open    High     Low   Close      Volume   \n",
+       "0     2020-03-13 20:00:00  ETHUSD  129.94  131.82  126.87  128.71  1940673.93  \\\n",
+       "1     2020-03-13 19:00:00  ETHUSD  119.51  132.02  117.10  129.94  7579741.09   \n",
+       "2     2020-03-13 18:00:00  ETHUSD  124.47  124.85  115.50  119.51  4898735.81   \n",
+       "3     2020-03-13 17:00:00  ETHUSD  124.08  127.42  121.63  124.47  2753450.92   \n",
+       "4     2020-03-13 16:00:00  ETHUSD  124.85  129.51  120.17  124.08  4461424.71   \n",
+       "...                   ...     ...     ...     ...     ...     ...         ...   \n",
+       "23669 2017-07-01 15:00:00  ETHUSD  265.74  272.74  265.00  272.57  1500282.55   \n",
+       "23670 2017-07-01 14:00:00  ETHUSD  268.79  269.90  265.00  265.74  1702536.85   \n",
+       "23671 2017-07-01 13:00:00  ETHUSD  274.83  274.93  265.00  268.79  3010787.99   \n",
+       "23672 2017-07-01 12:00:00  ETHUSD  275.01  275.01  271.00  274.83   824362.87   \n",
+       "23673 2017-07-01 11:00:00  ETHUSD  279.98  279.99  272.10  275.01   679358.87   \n",
+       "\n",
+       "        WeekDay  \n",
+       "0        Friday  \n",
+       "1        Friday  \n",
+       "2        Friday  \n",
+       "3        Friday  \n",
+       "4        Friday  \n",
+       "...         ...  \n",
+       "23669  Saturday  \n",
+       "23670  Saturday  \n",
+       "23671  Saturday  \n",
+       "23672  Saturday  \n",
+       "23673  Saturday  \n",
+       "\n",
+       "[23674 rows x 8 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -524,13 +722,48 @@
     }
    ],
    "source": [
-    "# Some methods\n",
-    "a = df[\"Date\"].min()\n",
-    "b = df[\"Date\"].max()\n",
-    "display(a, b)\n",
+    "display(df)\n",
+    "printhr()\n",
+    "\n",
+    "# Get the earliest date from a Series\n",
+    "earliest = df[\"Date\"].min()\n",
+    "latest = df[\"Date\"].max()\n",
+    "display(earliest, latest)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Time Delta (WIP)\n",
+    "#TODO\n",
+    "\n",
+    "A timedelta is the duration \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Timedelta('986 days 09:00:00')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
     "# Time Delta\n",
-    "c = b - a\n",
-    "display(c)"
+    "time_diff = latest  - earliest\n",
+    "display(time_diff)"
    ]
   },
   {
